2007-01-21  Michael Stucki  <michael@typo3.org>

	* Update copyright information (just the year, of course) in t3lib/config_default.php

2006-01-03  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fixed bug 931: Typolink to a page with certain type doesn't work if type is zero

2006-12-21  Dmitry Dulepov  <dmitry@typo3.org>

	* List module did not use BACK_PATH in many calls to TYPO3 functions, which made imposible to reuse List module classes in extensions

2006-12-20  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0.4

2006-12-20  Peter Niederlag  <peter@niederlag.de>

	* Fixing important security issue in rtehtmlarea

2006-12-13  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #2935: invalid HTML in Web>Versioning (quotes)

2006-12-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add page tree update to publish button of module Web>Versioning

2006-12-07  Franz Holzinger  <kontakt@fholzinger.com>

	* Fixed bug #4555: double posts in tt_board did not get detected because of unintended conversion into a negative integer

2006-12-05  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0.3
	* Updated font-copyright information in t3lib/fonts/readme.txt - many thanks to Christian Welzel for taking care of this!
	* Security enhancement: Prevent image access through thumbs.php. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20061205-1/ - thanks to Marc Bastian Heinrichs for discovering and reporting this issue.
	* Security enhancement: Refuse BE logins of usernames starting with "_CLI_" (they are only used by real CLI scripts)

2006-11-21  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix a problem with PHP4 and UTF-8 byte order marks (BOM) in t3lib_div::xml2array()

2006-11-17  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4059: options.hideRecords.pages doesn't work for mounted pages - Thanks to Marc Bastian Heinrichs for providing a fix!