@@ -1,3 +1,7 @@
+2007-01-23  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #4643: File Upload did not recognize BE-User option "defaultFileUploads" (thanks to Benjamin Mack)
+
 2007-01-21  Michael Stucki  <michael@typo3.org>
 
 	* Update copyright information (just the year, of course) in t3lib/config_default.php
